src/css/editor.scss
/**
 * SPDX-FileCopyrightText: 2023 Nextcloud GmbH and Nextcloud contributors
 * SPDX-License-Identifier: AGPL-3.0-or-later
 */

:root {
	--text-editor-max-width-default: min(80ch, 100%);
}

.full-width-view {
	--text-editor-max-width: calc(100% - 2 * 40px);
}

.sheet-view {
	&.landing-page-widgets,
	.page-heading-skeleton,
	.page-content-skeleton {
		width: min(var(--text-editor-max-width, var(--text-editor-max-width-default)), 100%);
		max-width: min(var(--text-editor-max-width, var(--text-editor-max-width-default)), 100%);
		margin-inline: auto;
	}

	.text-menubar {
		width: var(--text-editor-max-width, var(--text-editor-max-width-default)) !important;
		margin-inline: calc((100% - var(--text-editor-max-width, var(--text-editor-max-width-default))) / 2) !important;

		.text-menubar__entries {
			margin-left: unset !important;
		}
	}
}

.editor--outline {
	border-radius: var(--border-radius-large);
	box-shadow: 0 1px 10px var(--color-box-shadow);
	background-color: var(--color-main-background);
	z-index: 10021;
}

@media print {
	:root {
		--text-editor-max-width: 100%;
	}

	.full-width-view {
		--text-editor-max-width: 100%;
	}

	.sheet-view {
		margin: unset !important;
	}

	.page-title-container, .page-tags-container, .editor__content {
		margin: unset !important;
		max-width: unset !important;
		width: var(--text-editor-max-width, var(--text-editor-max-width-default));
	}
}

